Add LinkedIn profile link to author footer

--- a/index.html
+++ b/index.html
@@ -37,6 +37,9 @@
                 <div class="pm-tag" id="pmIndicator">PM</div>
             </div>
         </div>
+        <footer class="author">
+          <small>Developed by <a href="https://www.linkedin.com/in/marilynsaravia/" target="_blank" rel="noopener noreferrer">Marilyn Saravia</a></small>
+        </footer>
     </div>
     <script src="script.js"></script>
   </body>
